wwar.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3800,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.7,
  "homepage_snapshot_redirected_domain": "wwar.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001083441id_/http://wwar.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001083441id_/http%3A//wwar.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "wwar.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207060117id_/http%3A//wwar.com/privacy_policy.html",
  "policy_title": "Privacy Policy - World Wide Arts Resources, Corporation",
  "policy_url": "wwar.com/privacy_policy.html",
  "sha1": "b9955b8d5516fcff4c4786100505ae51e72b40e6",
  "simhash": 3787377480075995106,
  "simhash_updated": false,
  "site_hostname": "wwar.com",
  "site_url": "http://wwar.com",
  "smog": 14.02,
  "strict_updated": false,
  "timestamp": "20041207060117",
  "word_count": 605,
  "year": 2004
}

--- a/w/ww/wwa/wwar.com.html
+++ b/w/ww/wwa/wwar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wwar.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605095902id_/http%3A//wwar.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wwar.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207060117id_/http%3A//wwar.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Policy - World Wide Arts Resources, Corporation</title>
 <style type="text/css">
@@ -62,7 +62,7 @@ doc.cookie='he=llo; path=/;';} // -->
 <tr><td width="180" height="85" bgcolor="#cccccc" valign="top"><a href="http://wwar.com"><img src="/nincludes/wwar2logogry.jpg" width="180" height="85" alt="absolutearts.com" border="0"></a></td>
 <td width="590" height="80" bgcolor="#cccccc" valign="top" align="right">
 	<table width="590" border="0" cellpadding="0" cellspacing="0">
-	<tbody><tr><td width="590" height="15" bgcolor="#cccccc" align="right"><font class="font10">| &nbsp;<a href="http://wwar.com/marketplace.html">arts marketplace</a>&nbsp; | &nbsp;<a href="http://wwar.com/browse.html">browse the arts</a>&nbsp; | &nbsp;<a href="/press.html">submit arts news</a>&nbsp; | &nbsp;<a href="http://wwar.com/ads/">media kit</a>&nbsp; | &nbsp;<a href="http://wwar.com/services.html">services</a>&nbsp; | &nbsp;<a href="http://wwar.com/artists/">art history</a>&nbsp; </font></td></tr>
+	<tbody><tr><td width="590" height="15" bgcolor="#cccccc" align="right"><font class="font10">| &nbsp;<a href="http://wwar.com/marketplace.html">arts marketplace</a>&nbsp; | &nbsp;<a href="http://wwar.com/browse.html">browse the arts</a>&nbsp; | &nbsp;<a href="/press.html">submit arts news</a>&nbsp; | &nbsp;<a href="http://wwar.com/ads/">media kit</a>&nbsp; | &nbsp;<a href="http://wwar.com/ads/contact.html">contact</a>&nbsp; | &nbsp;<a href="http://wwar.com/artists/">art history</a>&nbsp; </font></td></tr>
 	<tr><td width="590" height="5"><img src="/2002/pix.gif" height="1" width="1</td"></td></tr>
 	<tr>
 	<td width="590" height="60" bgcolor="cccccc" align="right">
