--- a/t/to/top/topsmarkets.com.html
+++ b/t/to/top/topsmarkets.com.html
@@ -1,51 +1,93 @@
-<!--The following is the downloaded HTML source of the topsmarkets.com privacy policy that was archived on 2004-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040609231516id_/http%3A//www.topsmarkets.com/About/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the topsmarkets.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207063724id_/http%3A//www.topsmarkets.com/About/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Tops Markets</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><script language="JScript">
+
 <!--
+
 document.writeln("<STYLE ID=\"NOF_STYLE_SHEET\">")
+
 document.writeln("#LayoutLYR {position:absolute; top:0; left:0; z-index: 1; VISIBILITY: INHERIT; }")
+
 document.writeln("#Picture12LYR {position: absolute;  visibility: inherit; top:0; left:202; width:419; height:70; z-index:1}")
+
 document.writeln("#Picture53LYR {position: absolute;  visibility: inherit; top:70; left:201; width:42; height:32; z-index:2}")
+
 document.writeln("#Picture54LYR {position: absolute;  visibility: inherit; top:70; left:243; width:92; height:32; z-index:3}")
+
 document.writeln("#Picture55LYR {position: absolute;  visibility: inherit; top:70; left:335; width:70; height:32; z-index:4}")
+
 document.writeln("#Picture56LYR {position: absolute;  visibility: inherit; top:70; left:405; width:64; height:32; z-index:5}")
+
 document.writeln("#Picture57LYR {position: absolute;  visibility: inherit; top:70; left:469; width:82; height:32; z-index:6}")
+
 document.writeln("#Picture59LYR {position: absolute;  visibility: inherit; top:70; left:551; width:69; height:32; z-index:7}")
+
 document.writeln("#Picture30LYR {position: absolute;  visibility: inherit; top:0; left:0; width:201; height:102; z-index:8}")
+
 document.writeln("#LayoutRegion2LYR {position: absolute;  visibility: inherit; top:24; left:354; width:267; height:44; z-index:9}")
+
 document.writeln("#Text3729LYR {position: absolute;  visibility: inherit; top:222; left:165; width:440; height:342; z-index:10}")
+
 document.writeln("#Text3730LYR {position: absolute;  visibility: inherit; top:124; left:168; width:436; height:76; z-index:11}")
+
 document.writeln("</STYLE>")
 
+
+
 function MM_preloadImages() { //v3.0
+
   var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+
     var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+
     if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+
 }
 
+
+
 //-->
+
+
 
 function MM_swapImgRestore() { //v3.0
+
   var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+
 }
+
+
 
 function MM_findObj(n, d) { //v4.01
+
   var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+
     d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+
   if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+
   for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+
   if(!x && d.getElementById) x=d.getElementById(n); return x;
+
 }
 
+
+
 function MM_swapImage() { //v3.0
+
   var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+
    if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+
 }
+
 //-->
+
 </script><style id="NOF_STYLE_SHEET">
 #LayoutLYR {position:absolute; top:0; left:0; z-index: 1; VISIBILITY: INHERIT; }
 #Picture12LYR {position: absolute;  visibility: inherit; top:0; left:202; width:419; height:70; z-index:1}
@@ -59,7 +101,7 @@ function MM_swapImage() { //v3.0
 #LayoutRegion2LYR {position: absolute;  visibility: inherit; top:24; left:354; width:267; height:44; z-index:9}
 #Text3729LYR {position: absolute;  visibility: inherit; top:222; left:165; width:440; height:342; z-index:10}
 #Text3730LYR {position: absolute;  visibility: inherit; top:124; left:168; width:436; height:76; z-index:11}
-</style><title>Tops Markets</title></head>
+</style><title>TOPS Home of The Savings Cart</title></head>
 <!-- TOP NAVIGATION BAR -->
 
 
@@ -70,54 +112,115 @@ function MM_swapImage() { //v3.0
 
 
 
-	
+
+
+
+
+
+
+
+
 	
 
-  <body marginwidth="0" marginheight="0" leftmargin="0" topmargin="0" text="000000" link="000000" vlink="000000" alink="#000000" onload="MM_preloadImages('file:///C|/Documents%20and%20Settings/All%20Users/Documents/giantpatops/homepics/recepies.jpg','file:///C|/Documents%20and%20Settings/All%20Users/Documents/giantpatops/homepics/circular.jpg','file:///C|/Documents%20and%20Settings/All%20Users/Documents/giantpatops/homepics/departments.jpg')" bgcolor="white">
+	
+
+
+
+  <body marginwidth="0" marginheight="0" leftmargin="0" topmargin="0" text="000000" link="000000" vlink="000000" alink="blue" onload="MM_preloadImages('file:///C|/Documents%20and%20Settings/All%20Users/Documents/giantpatops/homepics/recepies.jpg','file:///C|/Documents%20and%20Settings/All%20Users/Documents/giantpatops/homepics/circular.jpg','file:///C|/Documents%20and%20Settings/All%20Users/Documents/giantpatops/homepics/departments.jpg')" bgcolor="white">
+
   <table width="816" border="0" cellpadding="1" cellspacing="0">
+
     <!--DWLayoutTable-->
+
    <tbody><tr> 
+
       <td width="270" height="20" valign="top"><!--DWLayoutEmptyCell-->&nbsp;</td>
+
       <td colspan="4" rowspan="2" valign="top"><!--DWLayoutEmptyCell-->&nbsp;</td>
+
       <td colspan="2" rowspan="6" valign="top"><!--DWLayoutEmptyCell-->&nbsp;</td>
+
       <td width="1">&nbsp;</td>
+
     </tr>
+
     <tr> 
-      <td rowspan="4" align="right" valign="top"><a href="http://www.topsmarkets.com"><img src="http://www.topsmarkets.com/shareddev/tops_templates/html/topslogo.gif" width="270" height="86" border="0"></a></td>
+
+      <td rowspan="4" align="right" valign="top"><a href="http://topswebdev.giantpa.aholdusa.com/"><img src="http://topswebdev.giantpa.aholdusa.com/shareddev/tops_templates/images/topcfmlogo.gif" width="270" height="86" border="0"></a></td>
+
       <td height="0"></td>
+
     </tr>
+
     <tr> 
+
       <td width="170" height="40" valign="top"><!--DWLayoutEmptyCell-->&nbsp;</td>
-      <td width="99" rowspan="4" valign="top"><a href="http://www.topsmarkets.com/shareddev/Tops_Store_Locator/Locator.cfm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','http://www.topsmarkets.com/shareddev/tops_templates/html/mytops2.jpg',1)"><img src="http://www.topsmarkets.com/shareddev/tops_templates/html/mytops1.jpg" name="Image5" width="99" height="99" border="0"></a></td>
+
+      <td width="99" rowspan="4" valign="top"><a href="http://topswebdev.giantpa.aholdusa.com/shareddev/Tops_Store_Locator/Locator.cfm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','http://topswebdev.giantpa.aholdusa.com/shareddev/tops_templates/html/mytops2.jpg',1)"><img src="http://topswebdev.giantpa.aholdusa.com/shareddev/tops_templates/html/mytops1.jpg" name="Image5" width="99" height="99" border="0"></a></td>
+
    
-      <td width="99" rowspan="4" valign="top"><a href="http://www.topsmarkets.com/GiftsEntertain/giftsentertain.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','http://www.topsmarkets.com/shareddev/tops_templates/html/gifts2.jpg',1)"><img src="http://www.topsmarkets.com/shareddev/tops_templates/html/gifts1.jpg" name="Image6" width="99" height="99" border="0"></a></td>
+
+      <td width="99" rowspan="4" valign="top"><a href="http://topswebdev.giantpa.aholdusa.com/GiftsEntertain/giftsentertain.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','http://topswebdev.giantpa.aholdusa.com/shareddev/tops_templates/html/gifts2.jpg',1)"><img src="http://topswebdev.giantpa.aholdusa.com/shareddev/tops_templates/html/gifts1.jpg" name="Image6" width="99" height="99" border="0"></a></td>
+
    
-      <td width="99" rowspan="4" valign="top"><a href="http://www.topsmarkets.com/savingscart/savingsplash.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','savings2.jpg',1)"></a><a href="http://www.topsmarkets.com/savingscart/savingsplash.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','http://www.topsmarkets.com/shareddev/tops_templates/html/savings2.jpg',1)"><img src="http://www.topsmarkets.com/shareddev/tops_templates/html/savings1.jpg" name="Image7" width="99" height="99" border="0"></a></td>
+
+      <td width="99" rowspan="4" valign="top"><a href="http://topswebdev.giantpa.aholdusa.com/savingscart/savingsplash.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','savings2.jpg',1)"></a><a href="http://topswebdev.giantpa.aholdusa.com/savingscart/savingsplash.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','http://topswebdev.giantpa.aholdusa.com/shareddev/tops_templates/html/savings2.jpg',1)"><img src="http://topswebdev.giantpa.aholdusa.com/shareddev/tops_templates/html/savings1.jpg" name="Image7" width="99" height="99" border="0"></a></td>
+
       <td></td>
+
     </tr>
+
     <tr> 
-      <td height="20" valign="top"><img src="http://www.topsmarkets.com/shareddev/tops_templates/html/smline.gif" width="170" height="10"></td>
+
+      <td height="20" valign="top"><img src="http://topswebdev.giantpa.aholdusa.com/shareddev/tops_templates/html/smline.gif" width="170" height="10"></td>
+
       <td></td>
+
     </tr>
+
     <tr> 
+
       <td rowspan="2" valign="top"><!--DWLayoutEmptyCell-->&nbsp;</td>
+
       <td height="17"></td>
+
     </tr>
+
     <tr> 
+
       <td rowspan="2" valign="top"><!--DWLayoutEmptyCell-->&nbsp;</td>
+
       <td height="20"></td>
+
     </tr>
+
     <tr> 
+
       <td height="2"></td>
+
       <td></td>
+
       <td></td>
+
       <td></td>
+
       <td width="24"></td>
+
       <td width="1"></td>
+
       <td></td>
+
     </tr>
+
   </tbody></table>
+
   
+
+
+
+
+
+
 
 
 
@@ -130,7 +233,7 @@ function MM_swapImage() { //v3.0
 
 
 
-<title>Tops Markets</title>
+<title>Tops Friendly Markets</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <script language="JavaScript" type="text/JavaScript">
 <!--
@@ -215,7 +318,7 @@ function MM_preloadImages() { //v3.0
 	.menu {display:none; margin-left:6px}
 -->
 </style>
-<table background="http://www.topsmarkets.com/tops_templates/html/ads.gif" height="505" cellspacing="0" cellpadding="0" width="188" bgcolor="#FFFFFF" border="0" align="LEFT" valign="TOP">
+<table background="http://g0ghqtwebdev01.giantpa.aholdusa.com/tops_templates/html/ads.gif" height="505" cellspacing="0" cellpadding="0" width="188" bgcolor="#FFFFFF" border="0" align="LEFT" valign="TOP">
   <tbody>
     <tr valign="top"><td width="10"></td> 
       <td valign="top" align="left"><!-- SCROLLING BAR -->
@@ -225,7 +328,7 @@ function MM_preloadImages() { //v3.0
 
 
 	<title>Untitled</title>
-	<link rel="stylesheet" type="text/css" href="http://www.topsmarkets.com/topstemplates/tops_main_styles.css">
+	<link rel="stylesheet" type="text/css" href="http://g0ghqtwebdev01.giantpa.aholdusa.com/topstemplates/tops_main_styles.css">
 
 
 
@@ -243,7 +346,7 @@ var scrollerbackground=''
 
 //configure the below variable to change the contents of the scroller
 var messages=new Array()
-messages[0]="<font face='Arial' size='-1'><a href='http://www.topsmarkets.com/TOPSBrands/CookiesandCrackers.html' TARGET='_parent'><div class='scroll'>Try Tops Brand Cookies & Crackers...</div></a></font>"
+messages[0]="<font face='Arial' size='-1'><a href='http://www.topsmarkets.com/sharedDev/sharedcontent/OrchardPerfect/index.cfm' TARGET='_parent'><div class='scroll'>Picked at the Peak of Perfection. Orchard Perfect Fruit!</div></a></font>"
 messages[1]="<font face='Arial' size='-1'><a href='http://www.topsmarkets.com/GiftCard/giftcardhomenew.html' TARGET='_parent'><div class='scroll'>The Perfect Gift...</div></a></font>"
 messages[2]="<font face='Arial' size='-1'><a href='http://www.topsmarkets.com/TOPSBrands/javana/javana.html' TARGET='_parent'><div class='scroll'>Ease into a smooth moment...</div></a></font>"
 messages[3]="<font face='Arial' size='-1'><a href='http://www.topsmarkets.com/BonusCard/clubmom.html' TARGET='_parent'><div class='scroll'>Join Club Mom!</div></a></font>"
@@ -509,7 +612,7 @@ document.writeln('</span>')
 <a href="http://www.topsmarkets.com/SharedDev/tops_recipes/Recipe_Search.cfm"><font face="Arial, Helvetica, sans-serif" size="2" color="black"><i>Recipes</i></font></a><br>
 <a href="http://www.topsmarkets.com/Wine/index.html"><font face="Arial, Helvetica, sans-serif" size="2" color="black"><i>Try Serving Wine...</i></font></a><br>
 <a href="http://www.topsmarkets.com/WhatsCooking/cookingschool.html"><font face="Arial, Helvetica, sans-serif" size="2" color="black"><i>Tops Cooking School</i></font></a><br>
-<a href="http://www.topsmarkets.com/WhatsCooking/FoodSafety/4steps.html"><font face="Arial, Helvetica, sans-serif" size="2" color="black"><i>Food Safety</i></font></a><br>
+<a href="http://www.topsmarkets.com/shareddev/sharedcontent/Food_Safety/"><font face="Arial, Helvetica, sans-serif" size="2" color="black"><i>Food Safety</i></font></a><br>
 
 
 
@@ -569,7 +672,7 @@ document.writeln('</span>')
 
 
 </td>
-        <td width="10" valign="top"><img src="http://www.topsmarkets.com/tops_templates/html/bigbar.gif" width="10" height="460"></td>
+        <td width="10" valign="top"><img src="http://g0ghqtwebdev01.giantpa.aholdusa.com/tops_templates/html/bigbar.gif" width="10" height="460"></td>
       </tr>
     </tbody></table>
 
@@ -581,7 +684,7 @@ document.writeln('</span>')
 <tbody><tr>
 <td>
 <!-- SPACER -->
-<img src="http://www.topsmarkets.com/topstemplates/homepics/pixel.gif" height="1" width="17" alt=" ">
+<img src="http://g0ghqtwebdev01.giantpa.aholdusa.com/topstemplates/homepics/pixel.gif" height="1" width="17" alt=" ">
 </td>
 <td>
 	</td>
@@ -591,7 +694,7 @@ document.writeln('</span>')
 
 <td>
 <!-- SPACER -->
-<img src="http://www.topsmarkets.com/topstemplates/homepics/pixel.gif" height="1" width="17" alt=" ">
+<img src="http://g0ghqtwebdev01.giantpa.aholdusa.com/topstemplates/homepics/pixel.gif" height="1" width="17" alt=" ">
 </td>
 
 <td colspan="2">
