jmu.edu (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 9795,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.36,
  "homepage_snapshot_redirected_domain": "jmu.edu",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040925083920id_/http://www.jmu.edu/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040925083920id_/http%3A//jmu.edu",
  "interval": "2004_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "jmu.edu",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207064850id_/http%3A//www.jmu.edu/jmuweb/privacy.shtml",
  "policy_title": "James Madison University - Privacy Statement",
  "policy_url": "jmu.edu/jmuweb/privacy.shtml",
  "sha1": "faf8b3a8507914643d4a2eb11b6a50cb27fd8835",
  "simhash": 2618781391573960596,
  "simhash_updated": false,
  "site_hostname": "jmu.edu",
  "site_url": "http://jmu.edu",
  "smog": 17.47,
  "strict_updated": false,
  "timestamp": "20041207064850",
  "word_count": 1539,
  "year": 2004
}

--- a/j/jm/jmu/jmu.edu.html
+++ b/j/jm/jmu/jmu.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jmu.edu privacy policy that was archived on 2003-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20031203043335id_/http%3A//www.jmu.edu/jmuweb/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jmu.edu privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207064850id_/http%3A//www.jmu.edu/jmuweb/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>James Madison University - Privacy Statement</title>
@@ -32,7 +32,7 @@
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tbody><tr> 
       <td width="230" valign="top"><table border="0" width="230" height="3" cellpadding="0" cellspacing="0">
-	<tbody><tr><td width="25"><img src="http://www.jmu.edu/jmuweb/images/spacer.gif" width="20" height="2"></td><td bgcolor="#450084"><img src="http://www.jmu.edu/jmuweb/images/spacer.gif" width="140" height="2"></td><td><img src="http://www.jmu.edu/jmuweb/images/spacer.gif" width="70" height="2"></td></tr>
+	<tbody><tr><td width="25"><img src="http://www.jmu.edu/jmuweb/images/spacer.gif" width="20" height="2" alt=" "></td><td bgcolor="#450084"><img src="http://www.jmu.edu/jmuweb/images/spacer.gif" width="140" height="2" alt=" "></td><td><img src="http://www.jmu.edu/jmuweb/images/spacer.gif" width="70" height="2" alt=" "></td></tr>
 </tbody></table>
 <a href="http://www.jmu.edu/jmuweb/search/jmu.shtml" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('jmusearch','','http://www.jmu.edu/jmuweb/images/jmusearch_over.gif',1)"><img name="jmusearch" border="0" src="http://www.jmu.edu/jmuweb/images/jmusearch.gif" width="230" height="25" alt="Search JMU"></a><a href="http://www.jmu.edu/jmuweb/search/people.shtml" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('findpeople','','http://www.jmu.edu/jmuweb/images/findpeople_over.gif',1)"><img name="findpeople" border="0" src="http://www.jmu.edu/jmuweb/images/findpeople.gif" width="230" height="25" alt="Find JMU People"></a><a href="http://www.jmu.edu/jmuweb/sitemap/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('siteindex','','http://www.jmu.edu/jmuweb/images/siteindex_over.gif',1)"><img name="siteindex" border="0" src="http://www.jmu.edu/jmuweb/images/siteindex.gif" width="230" height="25" alt="JMU Site Index"></a>
       </td>
@@ -281,7 +281,7 @@
     <td rowspan="3" width="135" valign="top" colspan="2" height="75"><a href="http://www.jmu.edu/"><img src="http://www.jmu.edu/ur/identity/websig/footer_logo_trans_gray.gif" width="135" height="75" border="0" alt="James Madison University Logo"></a></td>
   </tr>
   <tr>
-    <td valign="top" colspan="2" height="3" bgcolor="#450084"><img src="http://www.jmu.edu/jmuweb/images/blank.gif" width="19" height="3" alt=""></td>
+    <td valign="top" colspan="2" height="3" bgcolor="#450084"><img src="http://www.jmu.edu/jmuweb/images/blank.gif" width="19" height="3" alt=" "></td>
   </tr>
   <tr> 
     <td width="20" height="33">&nbsp;</td>
