--- a/w/we/wed/wedalert.com.html
+++ b/w/we/wed/wedalert.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wedalert.com privacy policy that was archived on 2004-04-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040404070850id_/http%3A//www.wedalert.com/company_info/privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wedalert.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207094500id_/http%3A//www.wedalert.com/company_info/privacypolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Wedding Planning for New York, New Jersey, Pennsylvania, Connecticut, Massachusetts, and Florida Weddings. Find a Wedding Hall, Photographer, Photography, Entertainment, Band, DJ, and more for weddings in NY, NJ, CT, PA, or FL.</title>
@@ -82,7 +82,71 @@ function YY_checkform() { //v4.71
 
 </head>
 
-<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0"><table width="778" border="0" cellspacing="0" cellpadding="0">
+<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" stats="1">
+<!-- Start of DeepMetrix (.NET) StatScript -->
+<script language="javascript">
+
+var DMNETdomain = "";
+var DMNETpage = window.location;
+var DMNETversion = "86";
+var DMNETsendTo = "//www.wedalert.com/dm.gif?";
+var DMNETsession;
+
+function dmneterr(){return true;}
+
+window.onerror=dmneterr;
+var s = new Date();
+
+if (navigator.userAgent.indexOf('Mac') >= 0 && s.getTimezoneOffset() >= 720)
+  s.setTime (s.getTime() - 1440*60*1000);
+
+var dmnetURL = location.protocol + DMNETsendTo+"v="+DMNETversion+"&vst=1";
+var dmnetCookieString = document.cookie.toString();
+
+if(dmnetCookieString.indexOf("_dmnid") == -1)
+  {
+    DMNETsession = parseInt( Math.random()*1000000 ) + "_" + s.getTime();
+    var domStr = "";
+    if(DMNETdomain != "")
+    {
+      domStr = "domain="+ DMNETdomain +";";
+    }
+    document.cookie = "_dmnid=" + DMNETsession + ";expires=Mon, 31-Dec-2008 00:00:00 GMT;"+domStr+"path=/;";
+  }
+dmnetCookieString = document.cookie.toString();
+if(dmnetCookieString.indexOf('_dmnid') == -1)
+  {
+    DMNETsession = "";
+  }
+else
+  {
+    if(dmnetCookieString.indexOf(';') == -1)
+      dmnetCookieString = dmnetCookieString.replace(/_dm/g, ';_dm');
+
+    var start = dmnetCookieString.indexOf("_dmnid=") + 7;
+    var end = dmnetCookieString.indexOf(";",start);
+
+    if (end == -1)
+      end = dmnetCookieString.length;
+    DMNETsession = unescape(dmnetCookieString.substring(start,end));
+  }
+dmnetURL += "&id="+DMNETsession+"&url="+escape(DMNETpage) + "&ref="+escape(document.referrer)+"&lng=" + ((!document.all ||  navigator.userAgent.match('Opera')) ? navigator.language : navigator.userLanguage) + "&tz=" + (Math.round(new Date('dec 1, 2002').getTimezoneOffset()/60)*-1);
+if(screen)
+  dmnetURL += "&scr=" + escape( screen.width + "x" + screen.height + " " + screen.colorDepth + "bpp" );
+
+dmnetURL += "&rnd=" + new Date().getTime();
+
+if(document.layers)
+{
+  document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+dmnetURL+"\" height=1 width=1></la"+"yer>");
+}
+else
+{
+  document.write("<di"+"v id=\"DMStats\" STYLE=\"position:absolute;visibility:hidden;\"><img src=\""+dmnetURL+"\" height=1 width=1></di"+"v>");
+}
+
+</script><div id="DMStats" style="position:absolute;visibility:hidden;"><img src="https://www.wedalert.com/dm.gif?v=86&amp;vst=1&amp;id=&amp;url=https%3A//web.archive.org/web/20041207094500id_/http%253A//www.wedalert.com/company_info/privacypolicy.asp&amp;ref=&amp;lng=en-US&amp;tz=0&amp;scr=800x600%2024bpp&amp;rnd=1580378362486" height="1" width="1"></div>
+<!-- End of DeepMetrix (.NET) StatScript --><table width="778" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
   <td><a name="top"></a>
     <table width="778" border="0" cellspacing="0" cellpadding="0">
@@ -140,11 +204,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </tr>
           <tr>
             <td width="251"><table width="251" border="0" cellspacing="0" cellpadding="0">
-              <tbody><tr>
-                <td width="164"><a href="http://www.wedalert.com/vendors.asp"><img src="http://www.wedalert.com/SSI/headers/vendors/images/logo.gif" width="164" height="72" border="0"></a></td>
-                <td width="87" bgcolor="#D9DFC9">&nbsp;</td>
-              </tr>
-            </tbody></table></td>
+                    <tbody><tr> 
+                      <td><a href="http://www.wedalert.com/vendors.asp"><img src="http://www.wedalert.com/SSI/headers/vendors/images/logo_new.gif" width="251" height="72" border="0"></a></td>
+                    </tr>
+                  </tbody></table></td>
             <td rowspan="2"><table width="326" height="88" border="0" cellpadding="0" cellspacing="0">
               <tbody><tr>
                 <td height="87" valign="bottom" bgcolor="#D9DFC9" class="text">
@@ -233,7 +296,11 @@ endSTM();
           </tr>
     </tbody></table></td>
   </tr>
-</tbody></table> </td>
+
+  
+</tbody></table>
+
+</td></tr></tbody></table> </td>
           </tr>
             </tbody></table>
             <table width="778" border="0" cellspacing="0" cellpadding="0">
@@ -347,7 +414,7 @@ endSTM();
                             <td width="5">&nbsp;</td>
                             <td class="textSmall"><p><strong>Email Address:<br>
                                       </strong> 
-                                      <input name="youremail" type="text" class="inputtext" id="youremail" size="20" maxlength="50">
+                                      <input name="youremail" type="text" class="inputtext" id="youremail" size="20" maxlength="50" value="">
                                       <br>
                                       <strong>Password:<br>
                                       </strong> 
@@ -994,13 +1061,6 @@ endSTM();
               <tbody><tr>
                 <td><table width="778" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td><table width="629" border="0" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td bgcolor="#CCCCCC"><img src="http://www.wedalert.com/SSI/footer/images/divider.GIF" width="10" height="1"></td>
-      </tr>
-    </tbody></table></td>
-  </tr>
-  <tr>
     <td><img src="http://www.wedalert.com/SSI/footer/images/divider.GIF" width="10" height="3"></td>
   </tr>
   <tr>
@@ -1034,7 +1094,7 @@ endSTM();
                                     <a href="http://www.wedalert.com/songs/cds/" class="smalltext">Wedding Music CDs</a><br>
                                     <a href="http://www.wedalert.com/content/planning/" class="smalltext">Planning Tools</a><br>
                                     <a href="http://www.wedalert.com/content/gowns/" class="smalltext">Wedding 
-                                    Dress</a></td>
+                                    Gowns</a></td>
                                 </tr>
                             </tbody></table></td>
                             <td width="3"><img src="http://www.wedalert.com/SSI/footer/images/divider.GIF" width="3" height="10"></td>
@@ -1045,10 +1105,11 @@ endSTM();
                                       <a href="http://www.wedalert.com/vendsearch/states/" class="smalltext">Local 
                                       Services</a><br>
                                       <a href="http://www.wedalert.com/locations/" class="smalltext">Reception 
-                                      Facilities</a><br>
+                                      Sites</a><br>
                                       <a href="http://www.wedalert.com/bridal_show/" class="smalltext">Bridal 
                                       Shows</a><br>
-                                      <a href="http://wedalert.weddingcheckout.com/" class="smalltext" target="_blank">Wedding Supplies</a></p></td>
+                                      <a href="http://www.ewedding.com/" target="_blank" class="smalltext">Wedding 
+                                      Websites</a></p></td>
                                 </tr>
                               </tbody></table></td>
                           </tr>
@@ -1061,10 +1122,10 @@ endSTM();
                         </tr>
                         <tr>
                           <td><strong>States in the WedAlert Directory:</strong><br>
-                              <a href="http://www.wedalert.com/vendsearch/states/california/" class="smalltext">California</a>, <a href="http://www.wedalert.com/vendsearch/states/connecticut/" class="smalltext">Connecticut</a>, <a href="http://www.wedalert.com/vendsearch/states/delaware/" class="smalltext"> Delaware</a>, <a href="http://www.wedalert.com/vendsearch/states/florida/" class="smalltext">Florida</a>, <a href="http://www.wedalert.com/vendsearch/states/georgia/" class="smalltext">Georgia</a>, <a href="http://www.wedalert.com/vendsearch/states/maine/" class="smalltext">Maine</a>, <a href="http://www.wedalert.com/vendsearch/states/maryland/" class="smalltext">Maryland</a>, <a href="http://www.wedalert.com/vendsearch/states/massachusetts/" class="smalltext">Massachusetts</a>, <a href="http://www.wedalert.com/vendsearch/states/newhampshire/" class="smalltext">New
+                              <a href="http://www.wedalert.com/vendsearch/states/california/" class="smalltext">California</a>, <a href="http://www.wedalert.com/vendsearch/states/connecticut/" class="smalltext">Connecticut</a>, <a href="http://www.wedalert.com/vendsearch/states/delaware/" class="smalltext"> Delaware</a>, <a href="http://www.wedalert.com/vendsearch/states/florida/" class="smalltext">Florida</a>, <a href="http://www.wedalert.com/vendsearch/states/georgia/" class="smalltext">Georgia</a>, <a href="http://www.wedalert.com/local_wedding_services/illinois/" class="smalltext">Illinois</a>, <a href="http://www.wedalert.com/vendsearch/states/maine/" class="smalltext">Maine</a>, <a href="http://www.wedalert.com/vendsearch/states/maryland/" class="smalltext">Maryland</a>, <a href="http://www.wedalert.com/vendsearch/states/massachusetts/" class="smalltext">Massachusetts</a>, <a href="http://www.wedalert.com/local_wedding_services/nevada/" class="smalltext">Nevada</a>, <a href="http://www.wedalert.com/vendsearch/states/newhampshire/" class="smalltext">New
                               Hampshire</a>, <a href="http://www.wedalert.com/vendsearch/states/newjersey/" class="smalltext">New
                               Jersey</a>, <a href="http://www.wedalert.com/vendsearch/states/newyork/" class="smalltext">New
-                              York</a>, <a href="http://www.wedalert.com/vendsearch/states/northcarolina/" class="smalltext"><br>
+                              York</a>, <a href="http://www.wedalert.com/vendsearch/states/northcarolina/" class="smalltext">
                               North Carolina</a>, <a href="http://www.wedalert.com/vendsearch/states/pennsylvania/" class="smalltext">Pennsylvania</a>, 
                               <a href="http://www.wedalert.com/vendsearch/states/rhodeisland/" class="smalltext">Rhode 
                               Island</a>, <a href="http://www.wedalert.com/vendsearch/states/southcarolina/" class="smalltext">South 
@@ -1094,7 +1155,7 @@ endSTM();
                             <td><a href="http://www.wedalert.com/company_info/privacypolicy.asp" class="text">Privacy 
                               Policy</a> | <a href="http://www.wedalert.com/company_info/service_terms.asp" class="text">Terms 
                               of Service</a> | <a href="http://www.wedalert.com/company_info/disclaimer.asp" class="text">Disclaimer</a> 
-                              | <a href="http://www.wedalert.com/company_info/sitemap.asp" class="text">Site Map</a></td>
+                              | <a href="http://www.wedalert.com/company_info/sitemap.asp" class="text">Site Map</a> | <a href="http://www.wedalert.com/wedding_pros/links_to.asp" class="text">Link to Us</a></td>
                         </tr>
                       </tbody></table></td>
                       <td align="left" valign="top"><img src="http://www.wedalert.com/SSI/footer/images/divider.GIF" width="3" height="10"></td>
@@ -1129,4 +1190,4 @@ endSTM();
     </tbody></table>
 
 
-</td></tr></tbody></table></body></html>
+</body></html>
