--- a/c/ca/cas/cashfiesta.com.html
+++ b/c/ca/cas/cashfiesta.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cashfiesta.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604210426id_/http%3A//cashfiesta.com%3Fprivacy_infocenter) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cashfiesta.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207114729id_/http%3A//cashfiesta.com%3Fprivacy_infocenter) for the most accurate reproduction.-->
 
 <html><head>
 <title>Make money online: Cashfiesta Policies</title>
@@ -25,23 +25,17 @@ if(document.images)
 }
 //-->
 </script>
-<script language="JavaScript">
-	//cntrSite visits
-	function cntrSiteCounter(){
-		var cntrSite_tm = new Date();
-		var cntrSite_time = cntrSite_tm.getFullYear()+"_"+(cntrSite_tm.getMonth()+1) +"_"+cntrSite_tm.getDate()+"_"+cntrSite_tm.getHours() +"_"+ cntrSite_tm.getMinutes() +"_"+ cntrSite_tm.getSeconds();
-		var cntrSite_params = "pg=site"+"&tm="+cntrSite_time+"&rf="+document.referrer;
-	
-		var cntrSite_img =new Image();
-		cntrSite_img.src="/php/sgif.php?"+cntrSite_params;
-	}
-	cntrSiteCounter();
-	  
+<script language="JavaScript">  
 	var cf_img_popu_array=new Array();
 	var cf_img_popu_index=0;
+	function adTestCounter(stat,page){
+	var cntr_params = "s="+stat+"&p="+page+"&1102420191";	
+	document.write("\<script language=\"javascript\" src=\"" + "/php/sscript.php?" + cntr_params + "\"\>\</script\>");	
+	}	
 	function cf_popuCounter(stat,page){
+	if('lottery_join' == page && 'popu_fastclick_bnr' == stat) adTestCounter("popu_fastclk_test",page);
 	cf_img_popu_array[cf_img_popu_index]=new Image();
-	cf_img_popu_array[cf_img_popu_index].src="/php/redir.php?"+stat+"&"+page+"&1086383267?http://images.cashfiesta.com/images/s.gif";
+	cf_img_popu_array[cf_img_popu_index].src="/php/sgif.php?s="+stat+"&p="+page+"&1102420191";
 	cf_img_popu_index++;
 	}
 	function cf_iframeUrlParams(p,l){
@@ -64,7 +58,7 @@ if(document.images)
  <td><img src="http://images.cashfiesta.com/images/s.gif" width="510" height="1"></td>
  </tr>
  <tr align="center">
- <td><script language="JavaScript" src="/php/rotate_js.php?target=cf_site&amp;login=&amp;tags=1&amp;width=468&amp;height=60"></script><a name="p69435href" href="javascript:p69435_go()"><img name="p69435img" src="https://web.archive.org/web/20020610191126/http://www.clixgalore.com/cgd.asp?BID=1540&amp;AfID=2992&amp;AdID=374" width="468" height="60" border="0"></a></td>
+ <td><script language="JavaScript" src="/php/rotate_js.php?target=cf_site&amp;login=&amp;tags=1&amp;width=468&amp;height=60"></script><a name="p69435href" href="javascript:p69435_go()"><img name="p69435img" src="https://web.archive.org/web/20020610191126/http://www.clickxchange.com/fd.phtml?act=342012.3633" width="468" height="60" border="0"></a></td>
  </tr>
  </tbody></table>
 </td>
@@ -413,8 +407,8 @@ i=u+x+'&sid='+id+'&m=3&f=b&v=1.4&c='+f+'&r='+escape(dc.referrer);
 u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=3&c='+f+'"  target="_top">';
 dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
 if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
-dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=s&amp;sid=12795&amp;m=3&amp;f=b&amp;v=1.4&amp;c=3051&amp;r=&amp;d=f" width="120" height="600" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=12795&m=3&c=3051"  target="_top"><img src="http://media.fastclick.net/w/get.media?t=s&sid=12795&m=3&f=b&v=1.4&c=3051&r=&d=n" width=120 height=600 border=0 ></a>
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=s&amp;sid=12795&amp;m=3&amp;f=b&amp;v=1.4&amp;c=3935&amp;r=&amp;d=f" width="120" height="600" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=12795&m=3&c=3935"  target="_top"><img src="http://media.fastclick.net/w/get.media?t=s&sid=12795&m=3&f=b&v=1.4&c=3935&r=&d=n" width=120 height=600 border=0 ></a>
 </iframe>
 <noscript>
 <a href='http://media.fastclick.net/w/click.here?sid=12795&m=3&c=1'  target='_top'>
@@ -472,6 +466,6 @@ for(i=0;i<cnt;i++){
 <td width="756" align="center" valign="middle"><span class="form_v1">©&nbsp;Copyright 2000-04 Cashfiesta.com All Rights Reserved</span></td>
 </tr>
 </tbody></table>
-
+<script language="javascript" src="/php/sscript.php?pg=site&amp;tm=2004_12_07_11_49_51&amp;rf="></script>
 
 </body></html>
