--- a/f/fa/fai/faith.com.html
+++ b/f/fa/fai/faith.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the faith.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606174312id_/http%3A//www.faith.com/common/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the faith.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207183122id_/http%3A//www.faith.com/common/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>Faith.com: Privacy</title>
@@ -64,7 +64,7 @@ function mp(m,u) {
 </head><body topmargin="0" leftmargin="0" marginwidth="0" bgcolor="FFFFCC" marginheight="0" text="black" link="003366" vlink="006699" alink="006699" onload="pr('/i/c/a.gif','/i/top_nav_home_on.gif','/i/top_nav_send_on.gif','/i/highlight_on.gif','/i/top_nav_email_on.gif','/i/top_nav_news_on.gif','/i/c/library_box_hed_on.gif','/i/c/community_box_hed_on.gif','/i/c/inspiration_box_hed_on.gif','/i/c/sites_box_hed_on.gif')"><a name="top"></a>
 <table width="720" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a target="_top" href="/"><img src="/i/section_banner.gif" width="720" height="47" border="0"></a></td></tr></tbody></table>
 <table width="720" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td width="720" bgcolor="990000"><img src="/i/c/s.gif" width="720" height="1" border="0"></td></tr><tr><td width="720" bgcolor="CCCCCC"><img src="/i/c/s.gif" width="1" height="2" border="0"></td></tr></tbody></table><table width="720" cellpadding="0" cellspacing="0" border="0"><tbody><tr>
- <td width="312" bgcolor="990000" height="20"><font face="verdana,arial" size="2" color="FFFFCC"><b><img src="/i/c/s.gif" width="10" height="2" border="0">Sunday June 6, 2004</b></font></td>
+ <td width="312" bgcolor="990000" height="20"><font face="verdana,arial" size="2" color="FFFFCC"><b><img src="/i/c/s.gif" width="10" height="2" border="0">Tuesday December 7, 2004</b></font></td>
  <td width="15" bgcolor="990000" height="20" valign="middle"><a href="/" target="_top" onmouseout="r()" onmouseover="s('i1','','/i/top_nav_m_home_on.gif','i0','','/i/highlight_on.gif',1)"><img name="i0" border="0" src="/i/highlight.gif"></a></td>
  <td width="45" bgcolor="990000"><a href="/" target="_top" onmouseout="r()" onmouseover="s('i0','','/i/highlight_on.gif','i1','','/i/top_nav_m_home_on.gif',1)"><img name="i1" border="0" src="/i/top_nav_m_home.gif"></a></td> <td width="15" bgcolor="990000" height="20" valign="middle"><a href="/common/gostore/" target="_top" onmouseout="r()" onmouseover="s('i9','','/i/top_nav_m_store_on.gif','i8','','/i/highlight_on.gif',1)"><img name="i8" border="0" src="/i/highlight.gif"></a></td>
  <td width="1" bgcolor="990000" height="20" valign="middle"><a href="/common/gostore/" target="_top" onmouseout="r()" onmouseover="s('i9','','/i/top_nav_m_store_on.gif','i8','','/i/highlight_on.gif',1)"><img name="i9" border="0" src="/i/top_nav_m_store.gif"></a></td>
@@ -229,13 +229,21 @@ trustmark, FOL Inc. has agreed to notify users of:
 </td></tr>
 <tr><td colspan="2" align="center">
 <br>
-<!-- BEGIN BURST! CODE -->
-<!-- /* Copyright 1997-2003 BURST! Media, LLC. All Rights Reserved. (Version 1.0F) */ --> 
-<iframe src="http://www.burstnet.com/cgi-bin/ads/ba10216a.cgi/if/v=1.0F/sz=468x60B//816564046152966/RETURN-CODE/" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" width="468" height="60">
-<A target="_blank" HREF="http://www.burstnet.com/ads/ba10216a-map.cgi/v=1.0F/sz=468x60B//816564046152966">
-<IMG SRC="http://www.burstnet.com/cgi-bin/ads/ba10216a.cgi/v=1.0F/sz=468x60B/816564046152966" border="0" alt="Please support our sponsor."></A>
-</iframe>
-<!-- END BURST! CODE -->
+<script type="text/javascript"><!--
+google_ad_client = "pub-1202071776974262";
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = "468x60_as";
+google_ad_channel ="";
+google_ad_type = "text_image";
+google_color_border = "FFFFCC";
+google_color_bg = "FFFFCC";
+google_color_link = "0000CC";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </td></tr>
 </tbody></table><br><br>
 
