--- a/g/ge/gen/genecopoeia.com.html
+++ b/g/ge/gen/genecopoeia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the genecopoeia.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610164622id_/http%3A//genecopoeia.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the genecopoeia.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207191927id_/http%3A//www.genecopoeia.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -35,18 +35,24 @@ A.search:hover {
 <body bgcolor="#000066" topmargin="0" text="#000000" link="#005b88" vlink="#005b88" alink="#005b88">
 <table width="742" border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
   <!--DWLayoutTable-->
-  <tbody><tr> 
+  <tbody><tr>
     <td width="22" height="22" valign="top"><img src="/images/head1.gif" width="22" height="22"></td>
-    <td colspan="2" align="right" valign="middle" bgcolor="#CCCCCC"> <small><a href="/search.php">Search Clones</a> | <a href="/order.php">How to Order</a> | <a href="/order/show_cart.php?back=1">Shopping Cart</a></small></td>
+<td bgcolor="#CCCCCC" width="220">&nbsp;</td>
+    <td align="right" valign="middle" bgcolor="#CCCCCC" width="478"><small>
+<!---
+<a href="search.php">Search Clones</a> |
+--->
+<a href="/order.php">How to Order</a> | <a href="/order/show_cart.php?back=1">Shopping Cart</a>
+</small></td>
     <td width="22" valign="top"><img src="/images/head2.gif" width="22" height="22"></td>
   </tr>
-  <tr> 
-    <td height="64">&nbsp;</td>
-    <td width="220" valign="middle"><a href="/"><img src="/images/logo_big.gif" width="220" height="48" border="0"></a></td>
-    <td width="478" align="center" valign="middle"><font color="#CC6600" style="font-size: 11pt"><b>ORFeome Solution to<br> Systems and Integrated Biology</b></font></td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr> 
+  <tr>
+    <td height="50">&nbsp;</td>
+    <td width="220" valign="middle"><a href="/"><img src="/images/logo_big.gif" width="220" hei="" ght="48" border="0"></a></td>
+    <td align="right" valign="middle" colspan="2"><img src="/images/ban1.jpg" border="0" title="
+ORFeome Solution to Systems and Integrated Biology"></td>
+  </tr>  
+<tr> 
     <td height="19" colspan="4" valign="top"> <script language="JavaScript" type="text/javascript">
 function mOvr(src,id)
 {
