ultimatecarpage.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "vehicles",
  "char_count": 2520,
  "classifier_probability": 0.76,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.15,
  "homepage_snapshot_redirected_domain": "ultimatecarpage.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001081206id_/http://www.ultimatecarpage.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001081206id_/http%3A//ultimatecarpage.com",
  "interval": "2004_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ultimatecarpage.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207201056id_/http%3A//www.ultimatecarpage.com/frame.php%3Ffile%3Dcopyright.html",
  "policy_title": "Ultimatecarpage.com - Images, Specifications and Information",
  "policy_url": "ultimatecarpage.com/frame.php?file=copyright.html",
  "sha1": "87e1e2dd736b087794cf3a9d3263373b701bbe49",
  "simhash": 5301648560173925937,
  "simhash_updated": false,
  "site_hostname": "ultimatecarpage.com",
  "site_url": "http://ultimatecarpage.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041207201056",
  "word_count": 395,
  "year": 2004
}

--- a/u/ul/ult/ultimatecarpage.com.html
+++ b/u/ul/ult/ultimatecarpage.com.html
@@ -1,202 +1,138 @@
-<!--The following is the downloaded HTML source of the ultimatecarpage.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602212113id_/http%3A//ultimatecarpage.com/frame.mv%3Ffile%3Dcopyright.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ultimatecarpage.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207201056id_/http%3A//www.ultimatecarpage.com/frame.php%3Ffile%3Dcopyright.html) for the most accurate reproduction.-->
 
 <html><head>
-<title>
-Ultimatecarpage.com - Images, Specifications and Information</title>
-<meta http-equiv="Content-Type" content="text/html;CHARSET=iso-8859-1">
+<title>Ultimatecarpage.com - Images, Specifications and Information</title>
+<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 <meta name="description" content="home">
 <meta name="keywords" content="photos, pictures, pics, wallapers, high resolution, specs, specifications, news section, Ferrari, McLaren, Nissan, Dodge, Chevrolet, Mercedes, Benz, BMW, Chrysler, Fiat, Alfa, Romeo, Aston, Martin, Jaguar, Ford, Volvo, Talbot, Jordan, Benneton, Arrows, Williams, Minardi, Sauber, BAR, Citroen, Peugeot, Renault, Volkswagen, VW, MG, Rover, TVR">
-<link rel="stylesheet" href="/style.css" type="text/css">
-<link rel="Index" href="/index.html">
-<script src="/__utm.js"></script>
+<link rel="stylesheet" href="http://www.ultimatecarpage.com/styles/style.css" type="text/css">
 <!-- FASTCLICK.COM INTERSTITIAL HEAD CODE v1.0 for ultimatecarpage.com -->
-<script language="javascript"><!--
-function FCx(x){
-  var min=15; // minimum minutes between interstitials (needs to be >15)
-  if(x.indexOf('get.media')>0){
-    x=unescape(x.substring(x.indexOf('&url=')+5,x.length));
-  }else{
-    if(document.cookie.indexOf('CxIC=1')<=0){
-      x='http://media.fastclick.net/w/get.media?sid=1995&m=5&url='+escape(x);
-      var date_ob=new Date();
-      date_ob.setTime(date_ob.getTime()+min*1000*60);
-      document.cookie='FCxIC=1; path=/; expires='+date_ob.toGMTString();
-    }
-  }
-  return x
-}
-// -->
-</script>
+<script language="javascript" type="text/javascript" src="http://www.ultimatecarpage.com/adware/fastclick_linkads.js"></script>
 <!-- FASTCLICK.COM INTERSTITIAL HEAD CODE v1.0 for ultimatecarpage.com -->
-<script language="JavaScript" src="/javascript/windowstyles.js">
-</script>
+<script language="javascript" type="text/javascript" src="http://www.ultimatecarpage.com/__utm.js"></script> 
+<script language="javascript" type="text/javascript" src="http://www.ultimatecarpage.com/includes/windowstyles.js"></script>
 </head>
-<body leftmargin="15" topmargin="0" rightmargin="15" bottommargin="0">
-<script language="JavaScript"> <!-- /* Copyright 1997-2003 BURST! Media, LLC. All Rights Reserved. (Version 1.0J) */ 
-function ShowBurstAd(adcode, width, height, sizes, intrusive, bgcolor, background) {
-var bN = navigator.appName;
-var bV = parseInt(navigator.appVersion);
-var base='http://www.burstnet.com/';
-var Tv=''; var Itr='';
-var sz=''; var bkgd='';
-var bgc=''; var rfr='';
-var vr='v=1.0J';
-var agt=navigator.userAgent.toLowerCase();
-
-if (sizes.length!=0) {sz='/sz='+sizes;} else {sz='';}
-if (bgcolor.length!=0) {bgc='/zg' + bgcolor;} else {bgc='';}
-if (background.length!=0) {bkgd='/bgi='+(escape(escape(background))).replace(/\//gi,'%252F');} else {bkgd='';}
-rfr='/r='+(escape(escape(top.location.href))).replace(/\//gi,'%252F');
-                            
-if (bV>=4) {
-  ts=window.location.pathname+window.location.search;
-  i=0; Tv=0; while (i< ts.length)
-    { Tv=Tv+ts.charCodeAt(i); i=i+1; } Tv="/"+Tv;
-} else {Tv=escape(window.location.pathname);
-  if( Tv.charAt(0)!='/' ) Tv="/"+Tv;
-    else if (Tv.charAt(1)=="/")
- Tv="";
-  if( Tv.charAt(Tv.length-1) == "/")
-   Tv = Tv + "_";
-}
-
-var fCode='<ifr'+'ame id="BURST" src="'+base+
- 'cgi-bin/ads/'+adcode+'.cgi/NI/if/'+vr+bgc+sz+bkgd+
- rfr+Tv+'/RETURN-CODE" width="'+width+'" height="'+
- height+'"'+'marginwidth="0" marginheight="0"'+
- 'hspace="0" vspace="0" frameborder="0" '+
- 'scrolling="no">';
- var gCode = '<'+'a href="'+base+'ads/'+adcode+'-map.cgi/'+
- vr+sz+rfr+Tv+'" target=_top><im'+'g src="'+base+
- 'cgi-bin/ads/'+adcode+'.cgi/'+vr+sz+rfr+Tv+
- '" border="0" alt="Click Here"></a>';
-var fCodeEnd = '</ifr'+'ame>';
-
-if ((adcode.charAt(0)=="a")&&(intrusive=="1")) {
- Itr='<di'+'v><scr'+'ipt src="'+base+'cgi-bin/ads/'+adcode+
- '.cgi/sz=0X0MN/'+vr+rfr+Tv+'/RETURN-CODE/JS/"></scr'+'ipt></d'+'iv>';
-}
-
-if (agt.indexOf("mac")==-1) {
-  document.write(fCode+gCode+fCodeEnd+Itr);
-} else {
-  document.write(gCode);
-}
-}
-
-//-->
-</script>
-<!-- END BURST CODE -->
-<script language="JavaScript">
-<!--
-
-function contactForm(url, name, options, nameOpener) {
-  var contact = open(url, name, options);
-  if (contact.opener == null)
-    contact.opener = window;
-  contact.opener.name = nameOpener;
-  return contact;
-}
-
-function launchContactForm() {
-  contactpop = contactForm("contact.php", "contactform", "height=520,width=420,channelmode=0,dependent=0,directories=0,fullscreen=0,location=0,menubar=0,resizable=0,scrollbars=0,status=0,toolbar=0", "contactwindow");
-}
-
-// -->
-</script>
+<body leftmargin="15" topmargin="0" rightmargin="15">
 <a name="top"></a>
-<center>
-
-<link rel="stylesheet" href="/style.css" type="text/css">
-
-
-<center>
+<!-- FASTCLICK.COM POP-UNDER CODE v1.8 for ultimatecarpage.com (12 hour) -->
+<script language="javascript"><!--
+var dc=document; var date_ob=new Date();
+dc.cookie='h2=o; path=/;';var bust=date_ob.getSeconds();
+if(dc.cookie.indexOf('e=llo') <= 0 && dc.cookie.indexOf('2=o') > 0){
+dc.write('<scr'+'ipt language="javascript" src="http://media.fastclick.net');
+dc.write('/w/pop.cgi?sid=1995&m=2&tp=2&v=1.8&c='+bust+'"></scr'+'ipt>');
+date_ob.setTime(date_ob.getTime()+43200000);
+dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
+</script>
+<!-- FASTCLICK.COM POP-UNDER CODE v1.8 for ultimatecarpage.com --><div style="text-align:center;">
+<table width="100%"><tbody><tr align="center"><td>
+<a href="/frame.php?file=subscriptions.php"><img src="/graphics/subscription/remove_ad_9x90.gif" align="right" border="0" alt="Click here to remove all ads"></a>
+</td><td align="center" width="768">
 <!-- TF 468x60 JScript HORIZ code -->
-<center><script language="javascript"><!--
+<script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=Ultimatecarpagecom&adSpace=ROS&size=468x60&type=horiz&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Ultimatecarpagecom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=20479945310.4634894325443164"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Ultimatecarpagecom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=20479939500.7344407082902007"></script>
 <noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=Ultimatecarpagecom&adSpace=ROS&size=468x60&requestID=1186822978" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=Ultimatecarpagecom&adSpace=ROS&size=468x60&requestID=1186822978" 
+   <a href="http://a.tribalfusion.com/i.click?site=Ultimatecarpagecom&adSpace=ROS&size=468x60&requestID=994315805" target=_blank>
+   <img src="http://a.tribalfusion.com/i.ad?site=Ultimatecarpagecom&adSpace=ROS&size=468x60&requestID=994315805" 
                   width=468 height=60 border=0 alt="Click Here"></a>
 </noscript>
-</center>
-<!-- TF 468x60 JScript HORIZ code -->
-</center>
-<br>
-
-<!-- FASTCLICK.COM POP-UNDER CODE v1.7e for ultimatecarpage.com -->
-<script language="javascript" src="/javascript/fastclick_popunder.js">
-</script>
-<!-- FASTCLICK.COM POP-UNDER CODE v1.7e for ultimatecarpage.com -->
-</center>
+<!-- TF 468x60 JScript HORIZ code --></td><td>
+<a href="/frame.php?file=subscriptions.php"><img src="/graphics/subscription/remove_ad_9x90.gif" align="left" border="0" alt="Click here to remove all ads"></a>
+</td></tr></tbody></table>
+</div>
 <table border="0" width="100%" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td valign="bottom">
-<a href="/frame.mv" target="_top"><img border="0" src="/logo_left.gif" align="left"></a>
-<a href="/frame.mv" target="_top">
-
-
-
-
-
-
-
-
-
-<img border="0" src="/logo_right_gt.gif" alt="ULTIMATECARPAGE.COM" align="right" hspace="0" height="80">
-
-</a>
+<a href="http://www.ultimatecarpage.com/frame.php" target="_top"><img border="0" src="http://www.ultimatecarpage.com/graphics/site/logo_left.gif" align="left" alt=""></a>
+<a href="http://www.ultimatecarpage.com/frame.php" target="_top"><img border="0" src="http://www.ultimatecarpage.com/graphics/site/logo_right_gt.gif" alt="ULTIMATECARPAGE.COM" align="right" hspace="0" height="80"></a>
 </td>
 </tr>
 <tr>
 <td>
 <table cellpadding="0" cellspacing="0" width="100%" border="0">
 <tbody><tr>
-<td background="/stripe.jpg" width="150"><img src="/banner.gif" width="150"></td>
-<td height="10" align="right" valign="top" border="0" background="/stripe2.jpg" width="100%">&nbsp;</td>
+<td background="http://www.ultimatecarpage.com/graphics/site/stripe.jpg" width="180"><img src="http://www.ultimatecarpage.com/graphics/site/banner.gif" width="180" alt=""></td>
+<td height="10" align="right" valign="top" background="http://www.ultimatecarpage.com/graphics/site/stripe2.jpg" width="100%">&nbsp;</td>
 </tr>
 </tbody></table>
-<table cellpadding="5" cellspacing="0" border="0">
+<table cellpadding="5" cellspacing="0" border="0" width="100%">
 <tbody><tr>
-<td valign="top" align="LEFT" class="dark">
-<form method="GET" action="/frame.mv">
-<input type="hidden" name="file" value="search.mv">
-<input type="hidden" name="search" value="yes">
-Search the database:<br>
-<input type="TEXT" name="keys" value="" size="12" maxlength="32"> <input type="submit" value="GO"> <br>
-<input type="radio" name="method" value="" class="dark"><span class="yellow">Quick</span> <input class="dark" type="radio" name="method" value="1"><span class="yellow">Advanced</span></form>
-<a class="caption" href="http://www.ultimatecarpage.com/forum/index.php">Forums:</a><br>
-<a class="big" href="http://www.ultimatecarpage.com/forum/forumdisplay.php?s=&amp;forumid=7">Manufacturer forums</a><br>
-<a class="big" href="http://www.ultimatecarpage.com/forum/forumdisplay.php?s=&amp;forumid=13">General automotive</a><br>
-<a class="big" href="http://www.ultimatecarpage.com/forum/forumdisplay.php?s=&amp;forumid=1">General forums</a><br>
-<span class="caption"> Cars:</span><br>
-<a class="big" href="/frame.mv?file=spotlight.mv">In the spotlight</a><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=brandlist.mv&amp;left=left_cars.mv">Cars by brand</a><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=race.mv">Racing Cars</a><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=list.mv&amp;typesearch=Proto">Prototypes</a><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=car.mv">Random Car</a><br>
-<span class="caption">Features:</span><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=Features/future.html">Future events</a><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=Features/events2004.html">Events 2004</a><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=Features/events2003.html">Events 2003</a><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=Features/events.html">Events 2002</a><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=wall.mv">Wallpapers</a><br>
-<span class="caption">Lists:</span><br>
-<a onclick="this.href=FCx(this.href);" class="big" href="/frame.mv?file=lists.html&amp;left=left_lists.mv">Sorted lists</a><br>
-<a class="big" href="/frame.mv?file=hitlist.mv">Top 50</a><br>
-<a class="big" href="/frame.mv?file=sitespec.mv">Site stats</a><br>
-<span class="caption"> General:</span><br>
-<a class="big" href="/" target="_top">Home</a><br>
-<a class="big" href="/frame.mv?file=news/current.mv">News</a><br>
-<a class="big" href="/frame.mv?file=Links.html">Links</a><br>
-<a class="big" href="javascript:launchContactForm()">Contact us</a> <br>
-<img src="/banner.gif" width="140">
+<td valign="top" align="left" class="dark" style="width:170px;">
+<script type="text/javascript">
+<!--
+function log_out(logoutphrase)
+{
+	ht = document.getElementsByTagName("html");
+	ht[0].style.filter = "progid:DXImageTransform.Microsoft.BasicImage(grayscale=1)";
+	if (confirm(logoutphrase))
+	{
+		return true;
+	}
+	else
+	{
+		ht[0].style.filter = "";
+		return false;
+	}
+}
+//-->
+</script>
 
+<script src="http://www.ultimatecarpage.com/forum/clientscript/vbulletin_md5.js" type="text/javascript"></script>
+<form action="http://www.ultimatecarpage.com/forum/login.php" method="post" onsubmit="md5hash(vb_login_password,vb_login_md5password)">
+<input name="vb_login_md5password" type="hidden">
+<input name="s" type="hidden" value="">
+<input name="do" type="hidden" value="login">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody><tr>
+<td>
+<div class="yellow" style="margin-bottom:3px;">Login, or 
+<a href="http://www.ultimatecarpage.com/forum/register.php">Register Now!</a></div>
+<input class="bginput" style="margin-bottom:3px;" name="vb_login_username" size="21" onfocus="this.value='';" type="text" value="Username">
+<input class="bginput" name="vb_login_password" size="11" type="password" onfocus="this.value='';" value="Password">
+<input class="contactsubmit" type="submit" value="Login!"><br>
+<input checked="checked" class="bginput" name="cookieuser" id="cb_cookieuser" type="checkbox" value="1">
+<span class="yellow">Remember me?</span>
 </td>
-<td class="light" width="100%" align="middle" valign="top">
+</tr>
+</tbody></table>
+</form>
+<form method="get" action="http://www.ultimatecarpage.com/frame.php" style="margin:0px;">
+<input type="hidden" name="file" value="search.php">
+ Search the cars database:<br>
+<input type="text" name="keys" value="" size="12" maxlength="32">&nbsp;<input type="submit" class="contactsubmit" value="Find!"><br>
+<input class="dark" type="radio" name="method" checked="" value="0"><span class="yellow">Quick</span>
+<input class="dark" type="radio" name="method" value="1"><span class="yellow">Advanced</span>
+</form><br>
+<a class="caption" href="http://www.ultimatecarpage.com/forum/index.php">Forums:</a><br>
+<div><li><a class="big" href="http://www.ultimatecarpage.com/forum/forumdisplay.php?s=&amp;forumid=7">Manufacturer forums</a></li></div>
+<div><li><a class="big" href="http://www.ultimatecarpage.com/forum/forumdisplay.php?s=&amp;forumid=13">General automotive</a></li></div>
+<div><li><a class="big" href="http://www.ultimatecarpage.com/forum/forumdisplay.php?s=&amp;forumid=1">General forums</a></li></div>
+<div class="caption"> Cars:</div>
+<div><li><a class="big" href="http://www.ultimatecarpage.com/frame.php?file=spotlight.php">In the spotlight</a></li></div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=brandlist.php">Cars by brand</a></li></div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=race.php">Racing Cars</a></li></div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=list.php&amp;type=Prototype">Prototypes</a></li></div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=car.php">Random Car</a></li></div>
+<div class="caption">Features:</div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=features/future.php">Future events</a></li></div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=features/events2004.html">Events 2004</a></li></div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=features/events2003.html">Events 2003</a></li></div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=features/events.html">Events 2002</a></li></div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=wall.php">Wallpapers</a></li></div>
+<div class="caption">Lists:</div>
+<div><li><a onclick="this.href=FCx(this.href);" class="big" href="http://www.ultimatecarpage.com/frame.php?file=lists.php">Sorted lists</a></li></div>
+<div><li><a class="big" href="http://www.ultimatecarpage.com/frame.php?file=sitespec.php">Site stats</a></li></div>
+<div class="caption"> General:</div>
+<div><li><a class="big" href="http://www.ultimatecarpage.com/frame.php" target="_top">Home</a></li></div>
+<div><li><a class="big" href="http://www.ultimatecarpage.com/frame.php?file=subscriptions.php" target="_top">Paid Subscriptions</a></li></div>
+<div><li><a class="big" href="http://www.ultimatecarpage.com/frame.php?file=current.php&amp;news=1">News</a></li></div>
+<div><li><a class="big" href="javascript:launchContactForm()">Contact us</a></li></div>
+<img src="http://www.ultimatecarpage.com/graphics/site/banner.gif" width="150" alt="">
+</td>
+<td class="light" align="center" valign="top">
 <table width="80%"><tbody><tr><td>
 <h2>Manifest</h2>
 
@@ -237,19 +173,37 @@ or club. The content of ultimatecarpage.com is Copyright © 1998-2003 Wouter Mel
 </tbody></table>
 <table width="100%" cellpadding="0" cellspacing="0" border="0" height="15">
 <tbody><tr>
-<td background="/stripe1.jpg"><img src="/banner.gif" width="150"></td>
-<td background="/stripe3.jpg" align="right" valign="bottom" border="0" width="100%">&nbsp;</td>
+<td background="http://www.ultimatecarpage.com/graphics/site/stripe1.jpg"><img src="http://www.ultimatecarpage.com/graphics/site/banner.gif" width="180" alt=""></td>
+<td background="http://www.ultimatecarpage.com/graphics/site/stripe3.jpg" align="right" valign="bottom" width="100%">&nbsp;</td>
 </tr>
 </tbody></table>
 </td>
 </tr>
 <tr cellpadding="10">
-<td align="right"><a class="nav" href="/frame.mv?file=copyright.html">Privacy Statement</a>
-<font color="#F6F6F6">- © 1998 - 2004 Ultimatecarpage.com</font>
+<td align="right">
+<a target="_top" href="http://z.extreme-dm.com/s/?tag=fritzie2">
+<img name="im" src="http://z0.extreme-dm.com/i/" height="0" border="0" width="0" alt=""></a>
+<script language="javascript"><!-- 
+var an = navigator.appName; 
+var d = document; 
+function pr() 
+{d.write('<img src=http://z1.extreme-dm.com/z/?tag=fritzie2&j=y&srw='+srw+'&srb='+srb+'&rs='+r+'&l='+escape(parent.document.referrer)+'\ height=1 width=1>');} 
+srb='na'; 
+srw='na'; 
+//--></script><script language="javascript1.2"><!-- 
+s=screen; 
+srw=s.width; 
+an!='Netscape'; 
+srb=s.colorDepth;srb=s.pixelDepth; 
+//--></script><script language="javascript"><!-- 
+r=41; 
+d.images?r=d.im.width:z=0; 
+pr();
+//--></script><img src="http://z1.extreme-dm.com/z/?tag=fritzie2&amp;j=y&amp;srw=800&amp;srb=24&amp;rs=0&amp;l=" height="1" width="1"><noscript><img height='1' width='1' alt='' src='http://z1.extreme-dm.com/z/?tag=fritzie2&j=n'></noscript><a class="nav" href="http://www.ultimatecarpage.com/frame.php?file=copyright.html">Privacy Statement</a>
+<span style="color:#F6F6F6;"> - © 1998 - 2004 Ultimatecarpage.com</span>
 </td>
 </tr>
 </tbody></table>
-
 
 
 </body></html>
