burnthefat.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 8475,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.69,
  "homepage_snapshot_redirected_domain": "burnthefat.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001000805id_/http://www.burnthefat.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001000805id_/http%3A//burnthefat.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "burnthefat.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207211338id_/http%3A//www.burnthefat.com/legal.cfm%3Fdoc%3Dprivacy",
  "policy_title": "Burn The Fat Feed the Muscle",
  "policy_url": "burnthefat.com/legal.cfm?doc=privacy",
  "sha1": "a1078aa235721e001303ac4cd42dd74af3a6d84d",
  "simhash": 9558311484473969394,
  "simhash_updated": false,
  "site_hostname": "burnthefat.com",
  "site_url": "http://burnthefat.com",
  "smog": 15.65,
  "strict_updated": false,
  "timestamp": "20041207211338",
  "word_count": 1372,
  "year": 2004
}

--- a/b/bu/bur/burnthefat.com.html
+++ b/b/bu/bur/burnthefat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the burnthefat.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605235533id_/http%3A//burnthefat.com/legal.cfm%3Fdoc%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the burnthefat.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207211338id_/http%3A//www.burnthefat.com/legal.cfm%3Fdoc%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head><title>Burn The Fat Feed the Muscle</title>
 <link rel="stylesheet" href="./files/burnthefat.css" type="text/css"></head>
@@ -84,7 +84,7 @@
 <span class="blacktext10">Designed and hosted by <br clear="all">
 <a href="http://www.criticalinfo.com" target="_blank" onmouseover="window.status = 'Click Here for Critical Info'; return true;">
 <img src="./images/cilogo.gif" border="0"></a><br>
-<a href="http://www.criticalinfo.com" target="_blank" onmouseover="window.status = 'Click Here for Critical Info'; return true;" class="footer">www.criticalinfo.com</a>
+<a href="http://www.criticalinfo.com" target="_blank" onmouseover="window.status = 'Click Here for Critical Info'; return true;" class="foot">www.criticalinfo.com</a>
 </span></span></td>
  </tr>
 
