bankoftexas.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 6699,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.47,
  "homepage_snapshot_redirected_domain": "bankoftexas.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001084418id_/http://www.bankoftexas.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001084418id_/http%3A//bankoftexas.com",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bankoftexas.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207214305id_/http%3A//www.bankoftexas.com/privacy.asp",
  "policy_title": "PRIVACY POLICY",
  "policy_url": "bankoftexas.com/privacy.asp",
  "sha1": "c4c9aa506a106e5028a85e10943152fa8c208114",
  "simhash": 2368256326600198787,
  "simhash_updated": false,
  "site_hostname": "bankoftexas.com",
  "site_url": "http://bankoftexas.com",
  "smog": 11.92,
  "strict_updated": false,
  "timestamp": "20041207214305",
  "word_count": 951,
  "year": 2004
}

--- a/b/ba/ban/bankoftexas.com.html
+++ b/b/ba/ban/bankoftexas.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bankoftexas.com privacy policy that was archived on 2004-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040612061051id_/http%3A//bankoftexas.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bankoftexas.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207214305id_/http%3A//www.bankoftexas.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>PRIVACY POLICY</title>
@@ -30,7 +30,7 @@
 <tbody><tr>
 <td valign="top" width="372" height="78" rowspan="4" bgcolor="#990000"><a href="/"><img src="/gfx/swooshlogobot.gif" width="372" height="78" border="0"></a></td>
 <td valign="top" width="110" height="31" rowspan="2" bgcolor="#990000"><img src="/gfx/swooshright.gif" border="0"></td>
-<td height="22" width="100%" bgcolor="#000000" class="white" align="right" nowrap=""><small><a href="/employment" class="white">Jobs</a> | <a href="/sitemap" class="white">Search</a> | <a href="/contact" class="white">Contact</a> | <a href="http://go.vicinity.com/bankota/prxStart.dsp?bank=_tx" class="white">Locations</a>&nbsp;&nbsp;</small></td>
+<td height="22" width="100%" bgcolor="#000000" class="white" align="right" nowrap=""><small><a href="/employment" class="white">Jobs</a> | <a href="/sitemap" class="white">Search</a> | <a href="/contact" class="white">Contact</a> | <a href="http://clients.mapquest.com/bankoftexas/mqlocator?link=find" class="white">Locations</a>&nbsp;&nbsp;</small></td>
 </tr>
 
 <tr>
@@ -87,7 +87,7 @@
 <option value="https://www.bankoftexas.com/personal/mortgage/disclosure.asp?page=app">Mortgage</option>
 <option value="https://www.bankoftexas.com/personal/loans/app/">Loans and Lines</option>
 <option>****BUSINESS****</option>
-<option value="http://www.bankoftexas.com/smallbusiness/online/online_enroll.asp">Online Banking</option>
+<option value="http://www.bankoftexas.com/smallbusiness/online/online_enroll.asp">Online Banking &amp; BillPay</option>
 <option value="https://netconnect.bokf.com/">NetConnect</option>
 </select>
 </td>
@@ -141,7 +141,7 @@
 <option value="/personal/pfs/">Private Fin. Serv.</option>
 <option value="/personal/savings/">Savings</option>
 <option value="/personal/student/">Student Info</option>
-<option value="/personal/turbotax/">Taxes</option>
+
 <option value="/personal/trust/">Trust &amp; Inv. Mgmt</option>
 <option value="/personal/atm.asp">VISA Check Card</option>
 </select>
@@ -158,7 +158,7 @@
 <option value="/smallbusiness/bankinggroup/">&nbsp;&nbsp;(sales $1-10 million)</option>
 <option value="/smallbusiness/bankinggroup/loans.asp#sba">SBA Loans</option>
 <option value="/smallbusiness/online/">Online Banking</option>
-<option value="/smallbusiness/retirement/">Retirement Services</option>
+<option value="/commercial/retirement/">Retirement Services</option>
 <option value="/smallbusiness/investserv/">Investments</option>
 </select>
 </td>
@@ -327,7 +327,7 @@ Keeping your account information
 <img src="/gfx/spacer.gif" border="0" width="1" height="1">
 </td>
 <td align="right" width="370" nowrap="" valign="top">
-<small><a href="/employment" class="black">Jobs</a> | <a href="/sitemap" class="black">Search</a> | <a href="/contact" class="black">Contact</a> | <a href="http://go.vicinity.com/bankota/prxStart.dsp?bank=_tx" class="black">Locations</a> |  <a href="/privacy.asp" class="black">Privacy</a> | <a href="/investor" class="black">Investor Info</a>&nbsp;&nbsp;</small>
+<small><a href="/employment" class="black">Jobs</a> | <a href="/sitemap" class="black">Search</a> | <a href="/contact" class="black">Contact</a> | <a href="http://clients.mapquest.com/bankoftexas/mqlocator?link=find" class="black">Locations</a> |  <a href="/privacy.asp" class="black">Privacy</a> | <a href="/investor" class="black">Investor Info</a>&nbsp;&nbsp;</small>
 </td>
 </tr>
 <tr>
